# deep-research

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  start-mcp.sh
.github/: copilot-instructions.md
src/deep_research/: __init__.py  server.py
tests/: test_server.py
