[project]
name = "deep-research"
version = "0.1.0"
description = "An MCP server for deep research powered by Azure AI Foundry"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Rene Pajta" }
]
keywords = ["mcp", "azure", "ai-foundry", "research", "agents", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/renepajta/deep-research"
Repository = "https://github.com/renepajta/deep-research.git"
Issues = "https://github.com/renepajta/deep-research/issues"

dependencies = [
    "mcp>=1.25.0",
    "openai>=2.14.0",
    "azure-identity>=1.26.0b1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
deep-research = "deep_research:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
